Fixed issue where scroll cut off at the wrong place

--- a/app/assets/stylesheets/visualization.css
+++ b/app/assets/stylesheets/visualization.css
@@ -128,6 +128,9 @@
   border: 1px solid #777777;
   border-radius: 2px;
 }
+#report-feed2 {
+  height:calc(100% - 48px)
+}
 #tab td{
 	padding-left:4px;
 }
@@ -162,16 +165,15 @@
 	color:#f44b42;
 	left:-1px;
 	height:13px;
-	padding-bottom:5px
+	padding-bottom:5px;
+	cursor: pointer;
 }
 
 #feed-header{
 	text-align:center;
 	width:100%;
 	background-color:#EAEAEA;
-	top:0px;
-	position:absolute;
-	bottom:22px;
+	position:relative;
 	border-bottom:solid grey 1px;
 	border-left:solid grey 1px;
 	border-right:solid grey 1px;
@@ -191,7 +193,8 @@
 	color:#f44b42;
 	vertical-align: middle;
 	line-height: 15px;
-	border-radius:13px
+	border-radius:13px;
+	cursor: pointer;
 }
 #load-button{
 	text-align:center;
@@ -200,6 +203,7 @@
 	background-color:grey;
 	border: 1px solid black;
 	border-radius: 5px;
+	cursor: pointer;
 }
 
 #legend-smell-value td {
@@ -548,6 +552,9 @@
 		left:-1px;
 		height:13px;
 		padding-bottom:2px
+	}
+	#report-feed2 {
+		height:calc(100% - 42px)
 	}
 	.report-feed-width{
 		width:97px;
